Fix spacing on navigation bar for smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,13 @@ a {
     margin: 0 10px;
 }
 
+.image-container {
+    margin: 0;
+    padding: 0;
+    height: 80px;
+    width: auto;
+}
+
 .chef-hat {
     height: 80px;
     width: auto;
@@ -376,11 +383,11 @@ i {
     }
 
     .chef-hat {
-        margin-top: 0;
+        margin: 0;
     }
 
     .link {
-        margin: 5px 20px 5px 10px;
+        margin: 0 20px 10px 10px;
     }
     
     /* homepage */
